--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
   <!-- Sección con 3 imágenes y descripciones -->
   <section class="galeria">
     <div class="galeria-item">
-      <img src="https://via.placeholder.com/200x150.png?text=Carta+1" alt="Carta 1">
+      <img src="Carta1.jpg" alt="Carta 1">
       <div class="descripcion-img">Descripción aquí</div>
     </div>
     <div class="galeria-item">
-      <img src="https://via.placeholder.com/200x150.png?text=Carta+2" alt="Carta 2">
+      <img src="Carta2.jpg" alt="Carta 2">
       <div class="descripcion-img">Descripción aquí</div>
     </div>
     <div class="galeria-item">
-      <img src="https://via.placeholder.com/200x150.png?text=Carta+3" alt="Carta 3">
+      <img src="Carta3.jpg" alt="Carta 3">
       <div class="descripcion-img">Descripción aquí</div>
     </div>
   </section>
