--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
       <!-- Galería de imágenes -->
       <section class="galeria">
         <div class="galeria-item">
-          <img src="carta1.jpg" alt="Carta 1">
+          <img src="Carta1.jpeg" alt="Carta 1">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
         <div class="galeria-item">
-          <img src="carta2.jpg" alt="Carta 2">
+          <img src="Carta2.jpeg" alt="Carta 2">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
         <div class="galeria-item">
-          <img src="carta3.jpg" alt="Carta 3">
+          <img src="Carta3.jpeg" alt="Carta 3">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
       </section>
