--- a/index.html
+++ b/index.html
@@ -201,8 +201,28 @@
       <!-- Sección para cliente -->
       <section class="cliente-section">
         <div class="cliente-box">
-          <p><strong>Enviar tu diseño</strong></p>
-        </div>
+ <p><strong>Enviar tu diseño personalizado</strong></p>
+ 
+ <!-- Formulario para enviar imagen -->
+ <form id="formulario-imagen" action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST" enctype="multipart/form-data">
+ 
+   <!-- Seguridad contra robots -->
+   <input type="hidden" name="_captcha" value="false">
+ 
+   <!-- Redirección luego de enviar -->
+   <input type="hidden" name="_next" value="https://amreyna.github.io/Cartas-Sofia/gracias.html">
+ 
+   <!-- Selección de imagen -->
+   <input type="file" id="imagen" name="imagen" accept=".jpg,.jpeg,.png,.gif" required>
+   <br><br>
+ 
+   <!-- Botón para enviar -->
+   <input type="submit" value="Enviar imagen" style="padding: 10px 20px; border: none; border-radius: 5px; background-color: #ffcccc; cursor: pointer;">
+   
+   <!-- Mensaje de error si no se cumple la condición -->
+   <p id="error-mensaje" style="color: yellow;"></p>
+ </form>
+</div>
 <div class="cliente-box">
  <p><strong>Realizar comentarios</strong></p>
  
