--- a/index.html
+++ b/index.html
@@ -133,6 +133,38 @@
       min-height: 150px;
       text-align: center;
     }
+    .testimonios {
+ margin-top: 60px;
+ padding: 40px;
+ background-color: #4b0012; /* un tono más oscuro del fondo */
+ border-top: 3px solid #ffcccc;
+ text-align: center;
+}
+ 
+.testimonios h2 {
+ font-size: 2em;
+ margin-bottom: 20px;
+ color: #ffcccc;
+}
+ 
+/* Estilo de cada testimonio */
+.testimonio {
+ opacity: 0; /* empieza invisible */
+ transform: translateY(30px); /* se ve como si subiera */
+ animation: aparecer 1s ease forwards; /* animación */
+ animation-delay: var(--delay); /* espera diferente para cada frase */
+ font-size: 1.2em;
+ color: white;
+ margin-bottom: 15px;
+}
+ 
+/* Animación definida */
+@keyframes aparecer {
+ to {
+   opacity: 1;
+   transform: translateY(0); /* vuelve a su lugar normal */
+ }
+}
   </style>
 </head>
 <body>
@@ -250,6 +282,15 @@
 
     </div>
   </div>
+  <!-- Sección de testimonios -->
+<section class="testimonios">
+ <h2>Lo que dicen sobre mis cartas</h2>
+ 
+ <!-- Cada testimonio aparecerá con animación -->
+ <div class="testimonio" style="--delay: 0s;">“Están hermosas 😍”</div>
+ <div class="testimonio" style="--delay: 1s;">“Le encantó a mi novio 💌”</div>
+ <div class="testimonio" style="--delay: 2s;">“Diseños súper originales”</div>
+</section>
 
 </body>
 </html>
