--- a/index.html
+++ b/index.html
@@ -169,12 +169,6 @@
 </head>
 <body>
 
-  <!-- Cabecera del sitio con el título -->
-  <!--
-  <header>
-    <h1 class="titulo-sitio">Cartas Hechas a Mano</h1>
-  </header>
-  -->
 
   <header>
     <!-- Contenedor que separa el título del menú -->
@@ -225,6 +219,10 @@
           <div class="descripcion-img">Descripción aquí</div>
         </div>
         <div class="galeria-item">
+          <img src="Carta1.jpeg" alt="Carta 3">
+          <div class="descripcion-img">Descripción aquí</div>
+        </div>
+         <div class="galeria-item">
           <img src="Carta1.jpeg" alt="Carta 3">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
