--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
           <img src="Carta1.jpeg" alt="Carta 3">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
+        <div class="galeria-item">
+          <img src="Carta1.jpeg" alt="Carta 3"br.>
+          <div class="descripcion-img">Descripción aquí</div>
+        </div>
       </section>
 
       <!-- Sección para cliente -->
