--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
     }
 
     .galeria-item img {
-     flex: 0 0 calc(25% - 20px); /* 4 por fila */
-  box-sizing: border-box;
-}
+     background-color: #fff;
+      border-radius: 12px;
+      width: 20px;
+      margin: 10px;
+      text-align: center;
+      color: #333;
+      }
     
 
     .descripcion-img {
