--- a/index.html
+++ b/index.html
@@ -104,12 +104,9 @@
     }
 
     .galeria-item img {
-     background-color: #fff;
-      border-radius: 12px;
-      width: 20px;
-      margin: 10px;
-      text-align: center;
-      color: #333;
+     width: 100%;
+      height: auto;
+      border-radius: 10px;
       }
     
 
