--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
 
     .galeria {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       flex-wrap: wrap;
+      max-width: 900px;
+      margin: auto;
     }
 
     .galeria-item {
