--- a/index.html
+++ b/index.html
@@ -214,24 +214,28 @@
       <!-- Galería de imágenes -->
       <section class="galeria">
         <div class="galeria-item">
-          <img src="Carta1.jpeg" alt="Carta 1">
+          <img src="sofi1.jpeg" alt="Carta 1">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
         <div class="galeria-item">
-          <img src="Carta1.jpeg" alt="Carta 2">
+          <img src="sofi2.jpeg" alt="Carta 2">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
         <div class="galeria-item">
-          <img src="Carta1.jpeg" alt="Carta 3">
+          <img src="sofi3.jpeg" alt="Carta 3">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
          <div class="galeria-item">
-          <img src="Carta1.jpeg" alt="Carta 3">
+          <img src="sofi4.jpeg" alt="Carta 3">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
         
         <div class="galeria-item">
-          <img src="Carta1.jpeg" alt="Carta 3">
+          <img src="sofi5.jpeg" alt="Carta 3">
+          <div class="descripcion-img">Descripción aquí</div>
+        </div>
+        <div class="galeria-item">
+          <img src="sofi6.jpeg" alt="Carta 3">
           <div class="descripcion-img">Descripción aquí</div>
         </div>
       </section>
