--- a/index.html
+++ b/index.html
@@ -236,7 +236,15 @@
         </div>
         <div class="galeria-item">
           <img src="sofi6.jpeg" alt="Carta 3">
-          <div class="descripcion-img">Descripción aquí</div>
+          <div class="descripcion-img">“Santuario de tinta y susurros”<br>
+Una carta que se despliega como un antiguo <br>
+hechizo: en cada pliegue, versos que acarician<br>
+y heridas que sanan. Dibujos detallados como <br>
+sueños entrelazados, pájaros, corazones,<br>
+símbolos secretos… todo resguardado en un <br>
+relicario de nostalgia y ternura. Es un fragmento de alma atrapado en papel,<br>
+perfecto para quien ama la belleza cruda de <br>
+  las emociones.</div>
         </div>
       </section>
 
