--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     .descripcion-img {
       margin-top: 10px;
-      height: 40px;
+      min-height: 60px;
     }
 
     .cliente-section {
