--- a/index.html
+++ b/index.html
@@ -227,12 +227,27 @@
         </div>
          <div class="galeria-item">
           <img src="sofi4.jpeg" alt="Carta 3">
-          <div class="descripcion-img">Descripción aquí</div>
+          <div class="descripcion-img">“Amor eterno”<br>
+Dos esqueletos sellan un abrazo que <br>
+trasciende el tiempo, rodeados de besos<br>
+suspendidos en el aire. Esta carta es una<br>
+promesa: la de un amor que ni la muerte<br>
+puede apagar. Una pieza melancólica y <br>
+apasionada, ideal para almas románticas que <br>
+encuentran belleza en lo eterno y lo imposible.</div>
         </div>
         
         <div class="galeria-item">
           <img src="sofi5.jpeg" alt="Carta 3">
-          <div class="descripcion-img">Descripción aquí</div>
+          <div class="descripcion-img">“Jardín de memorias”<br>
+Una carta que florece en cada palabra.<br>
+Pétalos de colores vibrantes enmarcan un<br>
+  mensaje íntimo y esperanzador, como un<br>
+susurro al oído de alguien amado.<br>
+  Hecha con la calidez de un abrazo y el suspiro de la <br>
+distancia, es un refugio para quienes creen<br>
+  que el amor puede brotar incluso en los <br>
+    rincones más tristes.</div>
         </div>
         <div class="galeria-item">
           <img src="sofi6.jpeg" alt="Carta 3">
