--- a/index.html
+++ b/index.html
@@ -215,15 +215,38 @@
       <section class="galeria">
         <div class="galeria-item">
           <img src="sofi1.jpeg" alt="Carta 1">
-          <div class="descripcion-img">Descripción aquí</div>
+          <div class="descripcion-img">"Encuentro de Estrellas"<br>
+            Esta carta cuenta una historia sin necesidad<br>
+            de muchas palabras: dos almas destinadas a <br>
+            encontrarse, como cometas que cruzan el <br>
+            cielo o como partículas bailando en el<br>
+            espacio. Con ilustraciones llenas de ternura,<br>
+            cada trazo es un suspiro, cada color, un<br>
+            pequeño universo. Ideal para regalar a quien<br>
+            hace que el mundo gire más despacio y el<br>
+            amor se sienta inevitable.</div>
         </div>
         <div class="galeria-item">
           <img src="sofi2.jpeg" alt="Carta 2">
-          <div class="descripcion-img">Descripción aquí</div>
+          <div class="descripcion-img">"Jardin de Caricias"<br>Entre corazones entrelazados, flores que<br>
+            brillan y dulces gatitos dibujados a mano, esta <br>
+            carta es un poema visual para quienes creen<br>
+            en la magia del amor sencillo y verdadero. Un<br>
+            regalo personalizado que late al ritmo de dos<br>
+            nombres, unidos como un jardín secreto que <br>
+            florece en papel.</div>
         </div>
         <div class="galeria-item">
           <img src="sofi3.jpeg" alt="Carta 3">
-          <div class="descripcion-img">Descripción aquí</div>
+          <div class="descripcion-img">"Suspiros de Amor"<br>
+            Un universo de amor y alegría vive en cada<br>
+            pliegue de esta carta. Con la ternura eterna<br>
+            de Snoopy y palabras que abrazan el corazón,<br>
+            esta creación combina colores vibrantes,<br>
+            pequeños secretos guardados en sobres y<br>
+            mensajes que susurran ‘Te amo’ en dos <br>
+            idiomas. Perfecta para regalar un pedacito<br>
+            de felicidad en cualquier momento del año.</div>
         </div>
          <div class="galeria-item">
           <img src="sofi4.jpeg" alt="Carta 3">
