--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Contenedor que separa el título del menú -->
     <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
       <!-- Título a la izquierda -->
-      <h1 class="titulo-sitio">Cartas Hechas a Mano</h1>   
+      <h1 class="titulo-sitio">MOKANI</h1>   
       <!-- Menú a la derecha -->
       <nav class="menu-navegacion">
         <a href="#inicio">Inicio</a>
@@ -201,13 +201,13 @@
       <!-- Sección de cuadros informativos -->
       <section class="info-section">
         <div class="info-box vertical">
-          <p>Cuadro vertical de ejemplo.</p>
+            <p>¿Que Somos?</p>
         </div>
         <div class="info-box">
-          <p>Promociones o texto decorativo aquí.</p>
+          <p>¿Quieres una carta?</p>
         </div>
         <div class="info-box">
-          <p>Historia o explicación del proyecto.</p>
+          <p>Mas regalos si no los propones :p</p>
         </div>
       </section>
 
