--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ perfecto para quien ama la belleza cruda de <br>
    <input type="hidden" name="_captcha" value="false">
  
    <!-- Redirección luego de enviar -->
-   <input type="hidden" name="_next" value="https://amreyna.github.io/Cartas-Sofia/gracias.html">
+   <input type="hidden" name="_next" value="https://amreyna.github.io/Cartas-Sofia/diseñoper.html">
  
    <!-- Selección de imagen -->
    <input type="file" id="imagen" name="imagen" accept=".jpg,.jpeg,.png,.gif" required>
