--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@ perfecto para quien ama la belleza cruda de <br>
    <!-- Selección de imagen -->
    <input type="file" id="imagen" name="imagen" accept=".jpg,.jpeg,.png,.gif" required>
    <br><br>
+    <input type="text" name="Nombre" placeholder="Tu nombre" required>
+  <input type="email" name="Email" placeholder="Tu correo" required>
+  <input type="file" name="Imagen" accept="image/*" required>
+  
  
    <!-- Botón para enviar -->
    <input type="submit" value="Enviar imagen" style="padding: 10px 20px; border: none; border-radius: 5px; background-color: #ffcccc; cursor: pointer;">
