--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ perfecto para quien ama la belleza cruda de <br>
     <input type="text" name="Nombre" placeholder="Tu nombre" required>
   <input type="email" name="Email" placeholder="Tu correo" required>
   
-  
+  <br><br>
  
    <!-- Botón para enviar -->
    <input type="submit" value="Enviar imagen" style="padding: 10px 20px; border: none; border-radius: 5px; background-color: #ffcccc; cursor: pointer;">
@@ -330,7 +330,9 @@ perfecto para quien ama la belleza cruda de <br>
    <!-- Área de texto para el comentario -->
    <textarea name="comentario" placeholder="Escribe tu comentario aquí..." rows="5" style="width: 100%; border-radius: 10px;"></textarea>
    <br><br>
- 
+ <input type="text" name="Nombre" placeholder="Tu nombre" required>
+  <input type="email" name="Email" placeholder="Tu correo" required>
+   <br><br>
    <!-- Botón para enviar -->
    <input type="submit" value="Enviar" style="padding: 10px 20px; border: none; border-radius: 5px; background-color: #ffcccc; cursor: pointer;">
  </form>
