--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@ perfecto para quien ama la belleza cruda de <br>
 </div>
         <div class="cliente-box">
           <p><strong>Realizar un pedido</strong></p>
+          <a href="pedido.html">
+  <button>Realizar pedido</button>
+</a>
         </div>
       </section>
 
