--- a/pedido.html
+++ b/pedido.html
@@ -84,7 +84,7 @@
 <body>
   <h1>Realizar Pedido de Cartas</h1>
 
-  <form action="https://formsubmit.co/TU_CORREO@ejemplo.com" method="POST">
+  <form action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST">
 
     <label>Nombre del comprador:</label>
     <input type="text" name="Nombre del comprador" required>
@@ -102,35 +102,41 @@
       <div class="carta-item">
         <input type="checkbox" name="Carta 1" value="Carta 1 - $100">
         <img src="sofi1.jpeg" alt="Carta 1">
-        <p>Carta 1 - $100</p>
+        <p>"Encuentro de Estrellas" - $100</p>
       </div>
 
       <!-- Carta 2 -->
       <div class="carta-item">
         <input type="checkbox" name="Carta 2" value="Carta 2 - $120">
         <img src="sofi2.jpeg" alt="Carta 2">
-        <p>Carta 2 - $120</p>
+        <p>"Jardin de Caricias" - $120</p>
       </div>
 
       <!-- Carta 3 -->
       <div class="carta-item">
         <input type="checkbox" name="Carta 3" value="Carta 3 - $110">
         <img src="sofi3.jpeg" alt="Carta 3">
-        <p>Carta 3 - $110</p>
+        <p>"Suspiros de Amor" - $110</p>
       </div>
 
       <!-- Carta 4 -->
       <div class="carta-item">
         <input type="checkbox" name="Carta 4" value="Carta 4 - $90">
         <img src="sofi4.jpeg" alt="Carta 4">
-        <p>Carta 4 - $90</p>
+        <p>"Amor Eterno" - $90</p>
       </div>
 
       <!-- Carta 5 -->
       <div class="carta-item">
         <input type="checkbox" name="Carta 5" value="Carta 5 - $130">
         <img src="sofi5.jpeg" alt="Carta 5">
-        <p>Carta 5 - $130</p>
+        <p>"Jardin de Memorias" - $130</p>
+      </div>
+
+      <div class="carta-item">
+        <input type="checkbox" name="Carta 6" value="Carta 6 - $130">
+        <img src="sofi6.jpeg" alt="Carta 6">
+        <p>"Santuario de tintas y Susurros" - $160</p>
       </div>
     </div>
 
