--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ perfecto para quien ama la belleza cruda de <br>
         <div class="cliente-box">
           <p><strong>Realizar un pedido</strong></p>
           <a href="pedido.html">
-  <button>Realizar pedido</button>
+  <input type="submit" value="Realizar pedidos" style="padding: 10px 20px; border: none; border-radius: 5px; background-color: #ffcccc; cursor: pointer;">
 </a>
         </div>
       </section>
