--- a/pedido.html
+++ b/pedido.html
@@ -85,7 +85,8 @@
   <h1>Realizar Pedido de Cartas</h1>
 
   <form action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST">
-<input type="hidden" name="_next" value="grax.html">
+<input type="hidden" name="_next" value="https://amreyna.github.io/Cartas-Sofia/grax.html">
+ 
     <label>Nombre del comprador:</label>
     <input type="text" name="Nombre del comprador" required>
 
@@ -165,3 +166,6 @@
   </script>
 </body>
 </html>
+
+
+
