--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-around;
-      margin: 20px 0;
+      margin: auto;
     }
 
     .info-box {
