--- a/index.html
+++ b/index.html
@@ -363,5 +363,29 @@ perfecto para quien ama la belleza cruda de <br>
  <div class="testimonio" style="--delay: 2s;">“Diseños súper originales”</div>
 </section>
 
+  <!-- Botón para ir al sitio -->
+<a href="https://miyabami.github.io/lusof/" target="_blank" class="boton-rosado">Visitar sitio</a>
+
+<style>
+.boton-rosado {
+  display: inline-block;
+  background-color: #ff66a3; /* Rosado bonito */
+  color: white;
+  padding: 15px 30px;
+  margin: 20px auto;
+  border: none;
+  border-radius: 12px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.boton-rosado:hover {
+  background-color: #e0558f;
+  transform: scale(1.05);
+}
+</style>
 </body>
 </html>
