--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@ perfecto para quien ama la belleza cruda de <br>
 </section>
 
   <!-- Botón para ir al sitio -->
-<a href="https://miyabami.github.io/lusof/" target="_blank" class="boton-rosado">Visitar sitio</a>
+<a href="https://miyabami.github.io/lusof/" target="_blank" class="boton-rosado">Pizzas :p</a>
 
 <style>
 .boton-rosado {
-  display: inline-block;
+  display: block;
   background-color: #ff66a3; /* Rosado bonito */
   color: white;
   padding: 15px 30px;
