--- a/index.html
+++ b/index.html
@@ -191,7 +191,13 @@
 
     <!-- Columna izquierda: Aquí se puede agregar información extra debajo del título -->
     <div class="columna-izquierda">
-      <!-- Por ahora está vacío, pero puedes poner enlaces, redes sociales, menú, etc -->
+      <div class="info-box">
+        <p> Videos de manualides <3 </p>
+        <iframe width="560" height="315"
+    src="https://youtu.be/lRaX48zf8CQ?si=HBwuaFoSo0Oqsq7T"
+    frameborder="0"
+    allowfullscreen>
+</iframe>
     </div>
 
     <!-- Columna derecha: contiene el contenido principal -->
@@ -203,10 +209,6 @@
             <p>¿Que Somos?</p>
           <br>Somos un espacio donde el amor, la nostalgia, la amistad y los sueños encuentran su forma en papel.
 Nos dedicamos a crear cartas artesanales, hechas a mano, pensadas para dedicar, regalar o simplemente atesorar. Cada carta es una pequeña obra de arte: llena de detalles, ilustraciones, palabras cuidadosamente elegidas y la intención de tocar corazones.<br>
-          
-<br>Creemos que en un mundo que a veces corre demasiado rápido, detenerse a escribir y regalar algo hecho desde el alma es un acto de amor profundo.
-Nuestras cartas son para quienes todavía creen en la magia de una nota inesperada, en el poder de una palabra honesta, en la belleza de los sentimientos vulnerables.
-Queremos ayudarte a decir aquello que a veces se siente tan grande que no cabe en la voz, pero que sí puede caber en un suspiro escrito, en un dibujo, en una carta.<br>
 <br>No solo vendemos papeles con palabras; construimos recuerdos, envolvemos emociones y regalamos momentos que ojalá duren toda la vida.<br>
         </div>
         <div class="info-box">
