--- a/index.html
+++ b/index.html
@@ -193,10 +193,9 @@
     <div class="columna-izquierda">
       <div class="info-box">
         <p> Videos de manualides <3 </p>
-        <iframe width="560" height="315"
-    src="https://youtu.be/lRaX48zf8CQ?si=HBwuaFoSo0Oqsq7T"
-    frameborder="0"
-    allowfullscreen>
+        <<iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/lRaX48zf8CQ" 
+    frameborder="0" allowfullscreen>
 </iframe>
     </div>
 
