--- a/index.html
+++ b/index.html
@@ -209,13 +209,19 @@
             <p>¿Que Somos?</p>
           <br>Somos un espacio donde el amor, la nostalgia, la amistad y los sueños encuentran su forma en papel.
 Nos dedicamos a crear cartas artesanales, hechas a mano, pensadas para dedicar, regalar o simplemente atesorar. Cada carta es una pequeña obra de arte: llena de detalles, ilustraciones, palabras cuidadosamente elegidas y la intención de tocar corazones.<br>
-<br>No solo vendemos papeles con palabras; construimos recuerdos, envolvemos emociones y regalamos momentos que ojalá duren toda la vida.<br>
+
         </div>
         <div class="info-box">
           <p>¿Quieres una carta?</p>
+          <br>Puedes elegir una de nuestras cartas ya hechas o pedir una personalizada.
+Al hacer tu pedido, recibirás un correo de confirmación y un ticket en PDF.
+Después, nos pondremos en contacto contigo por correo para afinar los detalles y asegurarnos de que tu carta sea justo como la imaginaste. 💌<br>
         </div>
+        
         <div class="info-box">
-          <p>Mas regalos si no los propones :p</p>
+          <p>¿Para que hacemos esto?</p>
+          <br>Hacemos esto porque creemos en el valor de lo hecho a mano, en las palabras que vienen del corazón y en los regalos que no se olvidan.
+Porque a veces, una carta es todo lo que alguien necesita para sentirse querido.💋🌈<br>
         </div>
       </section>
 
