--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </iframe>
     </div>
         <p>Manualidades San Valentin 📮</p>
-      
+      </div>
     </div>
 
     <!-- Columna derecha: contiene el contenido principal -->
