--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
   display: flex;
   flex-wrap: nowrap;         /* ❗️Evita que se acomoden una debajo de otra */
   width: 100%;
+  max-width: 100%;
   box-sizing: border-box;
 }
 
 .columna-izquierda {
-  flex: 0 0 25%;              /* ❗️25% fijo */
+  flex: 25%;              /* ❗️25% fijo */
   background-color: #66001c;
   padding: 20px;
   box-sizing: border-box;
@@ -169,7 +170,7 @@
 }
 
 .columna-derecha {
-  flex: 1;                    /* ❗️Toma el resto del espacio */
+  width: 75%;                   /* ❗️Toma el resto del espacio */
   padding: 20px;
   box-sizing: border-box;
 }
