--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
   font-size: 14px;
   text-align: center;
 }
+    iframe {
+  width: 100%;
+  max-width: 100%;
+  height: 200px;
+  border: none;
+}
     
   </style>
 </head>
