--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
  }
 /* Contenedor principal */
 .contenido {
-  display: flex;
+  display: flex !important;
   flex-wrap: nowrap;         /* ❗️Evita que se acomoden una debajo de otra */
   width: 100%;
   max-width: 100%;
@@ -213,7 +213,7 @@
   text-align: center;
 }
     iframe {
-  width: 100%;
+  width: 100% !important;
   max-width: 100%;
   height: 200px;
   border: none;
