--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
 }
 
 .columna-derecha {
-  width: 0 0 75%;                   /* ❗️Toma el resto del espacio */
+ flex: 1;
   padding: 20px;
   box-sizing: border-box;
+  
 }
 /* Tarjeta de video */
 .video-card {
