--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 }
 
 .columna-izquierda {
-  flex: 0 0 35%;              /* ❗️25% fijo */
+  flex: 1;              /* ❗️25% fijo */
   background-color: #66001c;
   padding: 20px;
   box-sizing: border-box;
