--- a/index.html
+++ b/index.html
@@ -169,9 +169,11 @@
 }
 
 .columna-derecha {
- flex: 2;
+ width: 300px;
+  background-color: #aa0044;
+  color: white;
   padding: 20px;
-  box-sizing: border-box;
+  
   
 }
 /* Tarjeta de video */
