--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
   padding: 20px;
   box-sizing: border-box;
   color: white;
+  flex-shrink: 0;
 }
 
 .columna-derecha {
@@ -173,6 +174,8 @@ flex-grow: 1;
   background-color: #aa0044;
   color: white;
   padding: 20px;
+  box-sizing: border-box;
+  min-width: 0;
   
   
 }
