--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
 }
 
 .columna-izquierda {
-  width: 300px;              /* ❗️25% fijo */
+  width: 300px;
+  flex-shrink: 0;/* ❗️25% fijo */
   background-color: #66001c;
   padding: 20px;
   box-sizing: border-box;
   color: white;
-  flex-shrink: 0;
 }
 
 .columna-derecha {
