--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 /* Contenedor principal */
 .contenido {
   display: flex;
-  flex-wrap: nowrap;         /* ❗️Evita que se acomoden una debajo de otra */
   width: 100%;
+  box-sizing: border-box;
 }
 
 .columna-izquierda {
