--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       background-color: #a93242;
       border-radius: 20px;
       padding: 20px;
-      width: 30%;
+      width: 100%;
+      margin: 0;
       box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
     }
 
@@ -165,7 +166,7 @@
   flex-basis: 35%;
   max-width: 400px;
   background-color: #66001c;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
   color: white;
 }
