--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-around;
+      align-items: stretch;
       margin: auto;
     }
 
@@ -66,11 +67,6 @@
       width: 90%;
       margin: 0;
       box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
-    }
-
-    .info-box.vertical {
-      width: 20%;
-      height: 340px;
     }
 
     .galeria {
@@ -288,7 +284,7 @@
       
       <!-- Sección de cuadros informativos -->
       <section class="info-section">
-        <div class="info-box vertical">
+        <div class="info-box">
             <p>¿Que Somos?</p>
           <br>Somos un espacio donde el amor, la nostalgia, la amistad y los sueños encuentran su forma en papel.
 Nos dedicamos a crear cartas artesanales, hechas a mano, pensadas para dedicar, regalar o simplemente atesorar. Cada carta es una pequeña obra de arte: llena de detalles, ilustraciones, palabras cuidadosamente elegidas y la intención de tocar corazones.<br>
