--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
   border: none;
   border-radius: 6px;
 }
+.video-card p {
+  color:black;
+}
 
 /* Contenedor responsivo para el video */
 .video-wrapper {
