--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 
     /* Cabecera completa del sitio */
     header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
       display: flex; /* usamos flexbox para acomodar los elementos horizontalmente */
       align-items: flex-start; /* alineamos los elementos al inicio de la parte superior */
       padding: 20px;
       background-color: #4b0012;
+      box-shadow: 0 4px 8px rgb(0,0,0,0.3)
     }
 
     /* Título principal del sitio */
@@ -153,9 +158,10 @@
 /* Contenedor principal */
 .contenido {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   width: 100%;
   box-sizing: border-box;
+  margin-top: 100px;
 }
 
 .columna-izquierda {
@@ -283,7 +289,7 @@
     </div>
 
     <!-- Columna derecha: contiene el contenido principal -->
-    <div class="columna-derecha">
+    <div class="columna-derecha" id="inicio">
       
       <!-- Sección de cuadros informativos -->
       <section class="info-section">
