--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Hacemos cartas porque creemos que lo pequeño también puede ser eterno.
       </section>
 
       <!-- Galería de imágenes -->
-      <section class="galeria">
+      <section class="galeria" id="galeria">
         <div class="galeria-item">
           <img src="sofi1.jpeg" alt="Carta 1">
           <div class="descripcion-img">"Encuentro de Estrellas"<br>
@@ -394,7 +394,7 @@ perfecto para quien ama la belleza cruda de <br>
       </section>
 
       <!-- Sección para cliente -->
-      <section class="cliente-section">
+      <section class="cliente-section" id="contacto">
         <div class="cliente-box">
  <p><strong>Enviar tu diseño personalizado</strong></p>
  
