--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       margin: 0;
       padding: 0;
     }
+    html {
+      scroll-behavior: smooth;
+    }
 
     /* Cabecera completa del sitio */
     header {
