--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 .testimonio {
  opacity: 0; /* empieza invisible */
  transform: translateY(30px); /* se ve como si subiera */
- animation: aparecer 1s ease forwards; /* animación */
+ animation: aparecer 2s ease-in-out forwards infinite; /* animación */
  animation-delay: var(--delay); /* espera diferente para cada frase */
  font-size: 1.2em;
  color: white;
@@ -153,9 +153,17 @@
  
 /* Animación definida */
 @keyframes aparecer {
- to {
-   opacity: 1;
-   transform: translateY(0); /* vuelve a su lugar normal */
+  0%{
+    opacity: 0;
+   transform: translateY(30px); 
+ }
+  50%{
+    opacity: 1;
+   transform: translateY(0px); 
+ }
+  100%{
+    opacity: 0;
+   transform: translateY(30px); 
  }
 }
 /* Contenedor principal */
