--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     .info-section {
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: center;
+      gap: 20px;
       align-items: stretch;
       margin: auto;
     }
