--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       width: 90%;
       margin: 0;
       box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
+      text-align: justify;
     }
 
     .galeria {
