--- a/index.html
+++ b/index.html
@@ -101,9 +101,14 @@
      width: 100%;
       height: auto;
       border-radius: 10px;
+      transition: transform 0.3s ease;
       }
-    
 
+    .galeria-item img:hover {
+      transform: scale(1.3);
+      z-index:10;
+    }
+    
     .descripcion-img {
       margin-top: 10px;
       min-height: 60px;
