--- a/pedido.html
+++ b/pedido.html
@@ -78,6 +78,17 @@
     button:hover {
       background-color: #a72550;
     }
+
+    .carta-item img {
+      transition: transform 0.3s ease;
+    }
+    
+    .carta-item img:hover {
+      transform: scale(1.65);
+      z-index: 10;
+      box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+    }
+    
   </style>
 </head>
 
