--- a/pedido.html
+++ b/pedido.html
@@ -109,6 +109,12 @@
       background-color: #e0558f;
       transform: scale(1.05);
     }
+
+    .carta-item input[type="checkbox"] {
+      display: block;
+      margin: 10px auto;
+      transform: scale(1.3); /* agranda un poco el checkbox */
+    }
     
   </style>
 </head>
@@ -138,52 +144,84 @@
     <div class="cartas">
       <!-- Carta 1 -->
       <div class="carta-item">
-        <input type="checkbox" name="Carta 1" value="Carta 1 - $100">
         <img src="sofi1.jpeg" alt="Carta 1">
+        <input type="checkbox" name="Carta 1" value="Carta 1 - $100">
         <p>"Encuentro de Estrellas" - $100</p>
       </div>
 
       <!-- Carta 2 -->
       <div class="carta-item">
-        <input type="checkbox" name="Carta 2" value="Carta 2 - $120">
         <img src="sofi2.jpeg" alt="Carta 2">
+        <input type="checkbox" name="Carta 2" value="Carta 2 - $120">
         <p>"Jardin de Caricias" - $120</p>
       </div>
 
       <!-- Carta 3 -->
       <div class="carta-item">
-        <input type="checkbox" name="Carta 3" value="Carta 3 - $110">
         <img src="sofi3.jpeg" alt="Carta 3">
+        <input type="checkbox" name="Carta 3" value="Carta 3 - $110">
         <p>"Suspiros de Amor" - $110</p>
       </div>
 
       <!-- Carta 4 -->
       <div class="carta-item">
-        <input type="checkbox" name="Carta 4" value="Carta 4 - $90">
         <img src="sofi4.jpeg" alt="Carta 4">
+        <input type="checkbox" name="Carta 4" value="Carta 4 - $90">
         <p>"Amor Eterno" - $90</p>
       </div>
 
       <!-- Carta 5 -->
       <div class="carta-item">
-        <input type="checkbox" name="Carta 5" value="Carta 5 - $130">
         <img src="sofi5.jpeg" alt="Carta 5">
+        <input type="checkbox" name="Carta 5" value="Carta 5 - $130">
         <p>"Jardin de Memorias" - $130</p>
       </div>
 
       <div class="carta-item">
-        <input type="checkbox" name="Carta 6" value="Carta 6 - $130">
         <img src="sofi6.jpeg" alt="Carta 6">
+        <input type="checkbox" name="Carta 6" value="Carta 6 - $130">
         <p>"Santuario de tintas y Susurros" - $160</p>
       </div>
     </div>
 
     <button type="submit">Enviar Pedido</button>
-    
+    <!-- TOTAL DINÁMICO -->
+    <div id="total-pedido" style="text-align: center; font-weight: bold; margin-top: 20px;">
+      Total: $0
+    </div>
     <a href="index.html" class="boton-regresar">⬅️ Regresar al inicio</a>
 
   </form>
 
+  
+<script>
+// Función para calcular el total
+function actualizarTotal() {
+  let total = 0;
+  const checkboxes = document.querySelectorAll('.carta-item input[type="checkbox"]');
+  checkboxes.forEach((checkbox) => {
+    if (checkbox.checked) {
+      // Extraer número del value: "Carta 1 - $100"
+      const texto = checkbox.value;
+      const precio = parseInt(texto.match(/\$(\d+)/)[1]); // Extrae el número
+      total += precio;
+    }
+  });
+
+  // Mostrar el total
+  document.getElementById('total-pedido').textContent = `Total: $${total}`;
+}
+
+// Ejecutar cuando se marque o desmarque un checkbox
+const checkboxes = document.querySelectorAll('.carta-item input[type="checkbox"]');
+checkboxes.forEach((checkbox) => {
+  checkbox.addEventListener('change', actualizarTotal);
+});
+
+// Ejecutar al cargar la página por si ya hay algo marcado
+actualizarTotal();
+</script>
+  
 </body>
 </html>
 
